[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/tex/gui.png" type="Texture" id=1]
[ext_resource path="res://assets/fnt/Roboto_28.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/task_UI.gd" type="Script" id=3]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 20, 2, 16, 16 )

[node name="task_UI" type="NinePatchRect"]
anchor_right = 0.972222
anchor_bottom = 0.46
rect_min_size = Vector2( 700, 184 )
texture = SubResource( 1 )
patch_margin_left = 4
patch_margin_top = 4
patch_margin_right = 4
patch_margin_bottom = 4
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="task_name_lbl" type="Label" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 690.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 2 )
text = "Task name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="task_start_lbl" type="Label" parent="."]
margin_left = 10.0
margin_top = 43.0
margin_right = 690.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )
text = "Task started:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rounds_count_lbl" type="Label" parent="."]
margin_left = 10.0
margin_top = 76.0
margin_right = 250.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = "Rounds: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="round_time_lbl" type="Label" parent="."]
margin_left = 374.0
margin_top = 76.0
margin_right = 690.0
margin_bottom = 109.0
custom_fonts/font = ExtResource( 2 )
text = "Round time: 999 minutes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="breaks_count_lbl" type="Label" parent="."]
margin_left = 10.0
margin_top = 109.0
margin_right = 250.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 2 )
text = "Breaks: 999"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="break_time_lbl" type="Label" parent="."]
margin_left = 374.0
margin_top = 109.0
margin_right = 690.0
margin_bottom = 142.0
custom_fonts/font = ExtResource( 2 )
text = "Break time: 999 minutes"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="status_lbl" type="Label" parent="."]
margin_left = 10.0
margin_top = 142.0
margin_right = 250.0
margin_bottom = 175.0
custom_fonts/font = ExtResource( 2 )
text = "Status: WIP"
__meta__ = {
"_edit_use_anchors_": false
}
